# Stratum

./: .gitignore  README.md  go.mod
backend/: Cargo.toml  go.mod
backend/cmd/api/: main.go
backend/internal/database/: db.go
backend/internal/handlers/: auth.go
backend/internal/middle/: middle.go
backend/src/: main.rs  models.rs
cmd/api/: main.go
docs/: architecture.md
frontend/src/routes/: +page.svelte
internal/handlers/: auth.go  projects.go
stratum-frontend/: README.md  package-lock.json  package.json
stratum-frontend/src/lib/: Modal.svelte
stratum-frontend/src/routes/: +page.svelte
stratum-frontend/src/routes/dashboard/: +page.svelte
stratum-frontend/src/routes/login/: +page.svelte
stratum-frontend/src/routes/register/: +page.svelte
