[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls", 
    "postgres", 
    "chrono", 
    "uuid", 
    "decimal"
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = "1.0" 

dotenvy = "0.15"
rand = "0.8"